Finished map switching functionality

--- a/src/index.html
+++ b/src/index.html
@@ -24,9 +24,14 @@
     <div class="row app-front">
         <div ng-controller="NavController as nc" class="col-sm-6 col-md-5 col-lg-3 pull-right">
 
-            <select ng-model="selectedMapType" ng-change="changeHandler()" ng-options="option as option.label for option in mapTypes track by option.name"></select>
-            <!--<select-map></select-map>-->
-
+            <div id="select-map">
+                <button class="btn btn-default btn-full-width force-square no-outline" ng-click="showMenu = !showMenu">
+                    {{ selectedMapType.label }} <i class="fa fa-angle-down pull-right"></i>
+                </button>
+                <ul ng-show="showMenu" class="force-square" >
+                    <li ng-repeat="option in mapTypes" ng-show="selectedMapType.name !== '{{ option.name }}'"><a href="#" ng-click="changeHandler()">{{ option.label }}</a></li>
+                </ul>
+            </div>
             <ul class="nav nav-pills navbar-default nav-justified text-nowrap">
                 <li ng-class="{ active: nc.isSelectedTab('options') }"><a class="force-square" ng-click="nc.selectTab('options')" href="#"><i class="fa fa-cogs"></i> Options</a></li>
                 <li ng-class="{ active: nc.isSelectedTab('features') }"><a class="force-square" ng-click="nc.selectTab('features')" href="#"><i class="fa fa-map-marker"></i> Features</a></li>
