Code output now updates on map change.

--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,8 @@
 <body>
 <div class="container-fluid">
     <div ng-controller="ViewMapController as mv">
-        <div ng-show="showMapType === 'OSM'" id="osmmap"></div>
-        <div ng-show="showMapType === 'GM'" id="gmap"></div>
+        <div ng-show="showMapType === 'OSM'"><div id="osmmap"></div></div>
+        <div ng-show="showMapType === 'GM'"><div id="gmap"></div></div>
     </div>
     <!-- http://getbootstrap.com/css/#grid -->
     <div class="row app-front">
