added meta tags

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="utf-8">
     <title>Mapstrap</title>
+	<meta name="keywords" content=" mapstrap, mapstrap.com, web maps ">
+	<meta name="description" content="Mapstrap: bootstrap your web map">
+	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <link rel="shortcut icon" type="image/x-icon" href="assets/icons/FontAwesome_f041(0)_16.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- build:css -->
