Moved logo to top right. Logo added in index.html instead of in code

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
     <!-- http://getbootstrap.com/css/#grid -->
     <div class="row app-front">
         <div ng-controller="NavController as nc" class="col-sm-6 col-md-5 col-lg-3 pull-right">
-
+			<div id="logo"><span><i class='fa fa-map-marker'></i> Mapstrap</span></div>
             <div id="select-map">
                 <button class="btn btn-default btn-full-width force-square no-outline" ng-click="showMenu = !showMenu">
                     {{ selectedMapType.label }} <i class="fa fa-angle-down pull-right"></i>
